--- a/config/database.yml
+++ b/config/database.yml
@@ -29,4 +29,8 @@ test:
 # ensure the database is located in a persisted volume.
 production:
   <<: *default
+  database: <%= ENV['POSTGRES_DB'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWD'] %>
+  host: <%= ENV['POSTGRES_HOST'] %>
   # database: path/to/persistent/storage/production.sqlite3
