--- a/config/database.yml
+++ b/config/database.yml
@@ -28,11 +28,18 @@ test:
 # Similarly, if you deploy your application as a Docker container, you must
 # ensure the database is located in a persisted volume.
 production:
-  adapter: postgresql
+  #adapter: postgresql
+  #encoding: unicode
+  #pool: 5
+  #database: <%= ENV['POSTGRES_DB'] %>
+  #username: <%= ENV['POSTGRES_USER'] %>
+  #password: <%= ENV['POSTGRES_PASSWD'] %>
+  #host: <%= ENV['POSTGRES_HOST'] %>
+  # database: path/to/persistent/storage/production.sqlite3
+  adapter: mysql
   encoding: unicode
   pool: 5
-  database: <%= ENV['POSTGRES_DB'] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
-  # database: path/to/persistent/storage/production.sqlite3
+  database: <%= ENV['MYSQL_DB'] %>
+  username: <%= ENV['MYSQL_USER'] %>
+  password: <%= ENV['MYSQL_PASSWD'] %>
+  host: <%= ENV['MYSQL_HOST'] %>
