--- a/config/database.yml
+++ b/config/database.yml
@@ -39,7 +39,7 @@ production:
   adapter: mysql2
   encoding: utf8mb4
   collation: utf8mb4_bin
-  reconnect: true
+  reconnect: false
   pool: 5
   database: <%= ENV['MYSQL_DB'] %>
   username: <%= ENV['MYSQL_USER'] %>
