--- a/test/fixtures/episodes.yml
+++ b/test/fixtures/episodes.yml
@@ -1,23 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   podcast_id: 1
-  url: http://example.com/episodes.rss
+  url:
   is_youtube: false
-  is_soundcloud: true
-
-
 two:
   podcast_id: 2
-  url: http://example.com/episodes.rss
+  url: http://example2.com/episodes.rss
   is_youtube: true
-  is_soundcloud: true
-
-three:
-  podcast_id: 3
-  url: http://example.com/episodes.rss
-  is_youtube: false
-  is_soundcloud: false
-
-
-
