--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Layout/IndentationConsistency:
   EnforcedStyle: normal
 Layout/IndentationWidth:
   Enabled: true
+Layout/BlockAlignment:
+  Enabled: true
 # Overwrite or add rules to create your own house style
 #
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
