--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 # Ignore storage (uploaded files in development and any SQLite databases).
 /storage/*
 !/storage/.keep
+!/storage/whisper/models/.keep
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
