--- a/Dockerfile.whispercpp
+++ b/Dockerfile.whispercpp
@@ -24,5 +24,5 @@ RUN apt-get update && \
 
 COPY --from=build /app /app
 #ENTRYPOINT [ "bash" ]
-ENTRYPOINT ["/app/build/bin/whisper-server", "--host","0.0.0.0","-l", "auto", "-m","/models/ggml-tiny.en.bin"]
+ENTRYPOINT ["/app/build/bin/whisper-server", "--host","0.0.0.0","-l", "auto", "-m","/models/ggml-base.en.bin"]
 
