--- a/config/database.yml
+++ b/config/database.yml
@@ -33,24 +33,14 @@ test:
 # Similarly, if you deploy your application as a Docker container, you must
 # ensure the database is located in a persisted volume.
 production:
-  #adapter: postgresql
-  #encoding: unicode
-  #pool: 5
-  #database: <%= ENV['POSTGRES_DB'] %>
-  #username: <%= ENV['POSTGRES_USER'] %>
-  #password: <%= ENV['POSTGRES_PASSWD'] %>
-  #host: <%= ENV['POSTGRES_HOST'] %>
-  # database: path/to/persistent/storage/production.sqlite3
   primary: &primary_production
-    adapter: mysql2
-    encoding: utf8mb4
-    collation: utf8mb4_bin
-    reconnect: false
-    pool: 5
-    database: <%= ENV['MYSQL_DB'] %>
-    username: <%= ENV['MYSQL_USER'] %>
-    password: <%= ENV['MYSQL_PASSWD'] %>
-    host: <%= ENV['MYSQL_HOST'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: <%= ENV['POSTGRES_DB'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWD'] %>
+  host: <%= ENV['POSTGRES_HOST'] %>
   queue:
     <<: *primary_production
     database: podcast_transcribe_production_queue
